High/check-add-rolebinding/.chainsaw-test/bad-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: test2
  name: check-add-rolebinding
rules:
- apiGroups: ["*"]
  resources: ["rolebindings"]
  verbs: ["get", "patch"]
