High/check-add-rolebinding/.chainsaw-test/good-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: test4
  name: check-add-rolebinding
rules:
- apiGroups: ["*"]
  resources: ["rolebindings"]
  verbs: ["list"]
