High/check-add-rolebinding/check-add-rolebinding.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-add-rolebinding
  annotations:
    policies.kyverno.io/title:  Allowing users in a rolebinding to add other users to their rolebindings
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: low
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.28"
    policies.kyverno.io/subject: ClusterRoleBinding
    policies.kyverno.io/description: >-
      This policy will check for all the service accounts which are mapped with a rolebinding allowing the user to map their rolebinding to other users.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-create-update-malicious-resource-roles
      match:
        any:
          - resources:
              kinds:
                - RoleBinding
      preconditions:
        any:
        - key: "{{ request.object.roleRef.kind || 'ClusterRole' }}"
          operator: NotEquals
          value: ClusterRole
      context:
        - name: role
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/namespaces/{{ request.object.metadata.namespace }}/roles/{{ request.object.roleRef.name }}"
      validate:
        message: >- 
           RoleBinding {{ request.object.metadata.name }} with subjects {{ request.object.subjects[].name }} 
           is using "{{role.metadata.name}}"
        deny:
          conditions:
            any:
              - key: "{{ ( contains(role.rules[].verbs[], 'get') || contains(role.rules[].verbs[], 'patch')) && contains(role.rules[].resources[], 'rolebindings') && contains(role.rules[].apiGroups[], '*')}}"
                operator: Equals
                value: true
