High/check-add-rolebinding/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-add-rolebinding
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
