High/check-add-rolebinding/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-add-rolebinding
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../check-add-rolebinding.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: check-add-rolebinding
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: bad-role.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: rb-bad.yaml
    - apply:
        file: good-role.yaml
    - apply:
        file: rb-good.yaml
